# AQI-Predictor-10Pearls

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml  requirements-api.txt  requirements-ml.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml  daily-training-pipeline.yml  deploy-cloud-run.yml  hourly-feature-pipeline.yml
.streamlit/: config.toml
api/: index.py
app/: flask_api.py  streamlit_app.py
docs/: deployment.md
notebooks/: karachi_aqi_eda.ipynb
reports/: eda_report.md  feature_importance.json  model_metrics.json  project_report.md  shap_summary.json
scripts/: generate_eda_report.py  repair_feature_scores.py  sync_model_reports.py
src/aqi_predictor/: __init__.py
src/aqi_predictor/config/: __init__.py  settings.py
src/aqi_predictor/pipelines/: __init__.py  backfill_pipeline.py  feature_pipeline.py  predict_pipeline.py  training_pipeline.py
src/aqi_predictor/services/: __init__.py  aqi_scale.py  features.py  modeling.py  openweather.py  prediction.py  sample_data.py  storage.py
tests/: test_api_routes.py  test_explainability.py  test_feature_store_hopsworks_insert.py  test_features.py  test_model_loading.py  test_openweather_backfill.py  test_prediction_model_cache.py  test_reports_metadata.py  test_training_prediction.py  test_training_selection.py
