[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pearls-aqi-predictor"
version = "0.1.0"
description = "Serverless AQI forecasting pipeline for Karachi using OpenWeather, Hopsworks, MongoDB, Flask, and Streamlit."
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "hopsworks>=4.7,<4.8",
  "pymongo>=4.6",
  "Flask>=3.0",
  "flask-cors>=4.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.36", "plotly>=5.22"]
dev = ["pytest>=8.0", "ruff>=0.5"]
deep-learning = ["tensorflow>=2.16"]
explainability = ["shap>=0.45"]
pipeline = ["hopsworks[python]>=4.7,<4.8", "tabulate>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
